--- a/travel-trucks/index.html
+++ b/travel-trucks/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Travel Trucks — пошук та фільтрація транспортних засобів для подорожей"
+    />
+    <meta name="keywords" content="travel, trucks, camper, rental, adventure" />
     <title>Travel Trucks</title>
   </head>
   <body>
